--- a/ECOMCupCake/ECOMCupCake/Views/Account/Register.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Views/Account/Register.cshtml
@@ -36,6 +36,18 @@
                 <input asp-for="ConfirmPassword" class="form-control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="State"></label>
+                @Html.DropDownListFor(m => m.State, Model.States,
+                htmlAttributes: new { @class = "form-control" })
+                <span asp-validation-for="State" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ZipCode"></label>
+                <input asp-for="ZipCode" class="form-control" />
+                <span asp-validation-for="ZipCode" class="text-danger"></span>
+            </div>
             <button type="submit" class="btn btn-default">Register</button>
         </form>
     </div>
