Add searchbar partial include

--- a/ECOMCupCake/ECOMCupCake/Views/Shared/_Layout.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
 </head>
 <body>
     @await Html.PartialAsync("_nav")
+    @await Html.PartialAsync("_searchBar")
     <div class="container body-content">
         @RenderBody()
         <hr />
