--- a/ECOMCupCake/ECOMCupCake/wwwroot/css/site.css
+++ b/ECOMCupCake/ECOMCupCake/wwwroot/css/site.css
@@ -1,13 +1,17 @@
 ﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
 }
 
 /* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
 .body-content {
+    /*
     padding-left: 15px;
     padding-right: 15px;
+*/
+}
+.form {
+
+    padding-top: 3.5rem;
 }
 
 /* Carousel */
