--- a/ECOMCupCake/ECOMCupCake/Views/Shared/_nav.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Views/Shared/_nav.cshtml
@@ -1,13 +1,20 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    @Html.ActionLink("CupCake store", "Index", new { controller = "Home" }, new { @class = "navbar-brand" })
+    @Html.ActionLink("Main page", "Index", new { controller = "Home" }, new { @class = "navbar-brand" })
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbars" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbars">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="https://getbootstrap.com/docs/4.1/examples/jumbotron/#">All products</a>
+                <a class="nav-link" href="https://getbootstrap.com/docs/4.1/examples/jumbotron/#">Link</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link disabled" href="https://getbootstrap.com/docs/4.1/examples/jumbotron/#">Disabled</a>
             </li>
         </ul>
+        <div class="navbar-nav ml-auto">
+            @Html.ActionLink("Sign in", "Login", "Account")&nbsp;or&nbsp;
+            @Html.ActionLink("Sign up", "Register", "Account")
+         </div>
     </div>
 </nav>
