--- a/ECOMCupCake/ECOMCupCake/wwwroot/css/site.css
+++ b/ECOMCupCake/ECOMCupCake/wwwroot/css/site.css
@@ -1,17 +1,21 @@
-﻿body {
+﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
+for details on configuring this project to bundle and minify static web assets. */
+body {
+    padding-top: 50px;
+    padding-bottom: 60px;
 }
+
+html {
+    position: relative;
+    min-height: 100%;
+}
+
 
 /* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
 .body-content {
-    /*
     padding-left: 15px;
     padding-right: 15px;
-*/
-}
-.form {
-
-    padding-top: 3.5rem;
 }
 
 /* Carousel */
@@ -25,15 +29,30 @@
     width: 100%;
 }
 
-/* QR code generator */
-#qrCode {
-    margin: 15px;
-}
-
 /* Hide/rearrange for smaller screens */
 @media screen and (max-width: 767px) {
     /* Hide captions */
     .carousel-caption {
         display: none;
+    }
+}
+
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #f5f5f5;
+}
+
+.bg-dark {
+    background-color: #343a40 !important;
+}
+
+@media (max-width: 768px) {
+    #nav-search-btn {
+        width: 100%;
     }
 }
