--- a/ECOMCupCake/ECOMCupCake/Views/Shared/_Layout.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Views/Shared/_Layout.cshtml
@@ -7,14 +7,24 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-
-
 </head>
 <body>
     @await Html.PartialAsync("_nav")
-    @*@await Html.PartialAsync("_searchBar")*@
+    <div id="mainCarousel" class="carousel slide carousel-fade" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" style="background-image: url('/images/cupcake_car_2.jpg')">
+                <div class="carousel-text">
+                    <h1>
+                        Made from scratch. Baked fresh. Simply delicious.
+                    </h1>
+                </div>
+            </div>
+            @RenderSection("Carousel", required: false)
+        </div>
+    </div>
+    @RenderSection("BeforeBody", required: false)
     <main role="main">
-
         <div class="container body-content">
             @RenderBody()
         </div>
@@ -24,10 +34,10 @@
                 <span class="">2018 - CupCake Store</span>
             </div>
         </footer>
-        </main>
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-        <script src="~/js/Site.js" asp-append-version="true"></script>
-        @RenderSection("Scripts", required: false)
+    </main>
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="~/js/Site.js" asp-append-version="true"></script>
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
