--- a/ECOMCupCake/ECOMCupCake/wwwroot/css/site.css
+++ b/ECOMCupCake/ECOMCupCake/wwwroot/css/site.css
@@ -1,7 +1,6 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
 for details on configuring this project to bundle and minify static web assets. */
 body {
-    padding-top: 120px;
     padding-bottom: 60px;
 }
 
@@ -24,10 +23,25 @@ html {
     line-height: 1.4;
 }
 
+#mainCarousel {
+    padding-bottom: 20px;
+}
 /* Make .svg files in the carousel display properly in older browsers */
 .carousel-inner .item img[src$=".svg"] {
     width: 100%;
 }
+
+.carousel-item {
+    height: 500px;
+}
+
+.carousel-item img {
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 0px;
+}
+
 
 /* Hide/rearrange for smaller screens */
 @media screen and (max-width: 767px) {
@@ -51,11 +65,65 @@ html {
     background-color: #343a40 !important;
 }
 
+.navbar-wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 10;
+    margin-top: 20px;
+    margin-bottom: -90px;
+}
+
 @media (max-width: 768px) {
     #nav-search-btn {
         width: 100%;
     }
 }
+
+
+.carousel-text {
+    position: absolute;
+    right: 15%;
+    left: 15%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    color: #fff;
+    text-align: center;
+    bottom: 40%;
+    z-index: 20;
+}
+
+.carousel-text h1 {
+    font-size: 3rem;
+    color: #fff;
+    text-align: center;
+    text-shadow: 0 1px 2px rgba(0,0,0,.6);
+}
+
+@media (max-width: 768px) {
+    .carousel-item {
+        height: 350px;
+    }
+
+
+    .carousel-text {
+        position: absolute;
+        right: 0%;
+        left: 0%;
+        color: #fff;
+        bottom: 20%;
+        width: 100%;
+    }
+
+    .carousel-text h1 {
+        font-size: 2.5rem;
+    }
+
+
+}
+
+
 
 
 .btn-product {
