--- a/ECOMCupCake/ECOMCupCake/wwwroot/css/site.css
+++ b/ECOMCupCake/ECOMCupCake/wwwroot/css/site.css
@@ -101,26 +101,11 @@ html {
     text-shadow: 0 1px 2px rgba(0,0,0,.6);
 }
 
-@media (max-width: 768px) {
-    .carousel-item {
-        height: 350px;
-    }
-
-
-    .carousel-text {
-        position: absolute;
-        right: 0%;
-        left: 0%;
-        color: #fff;
-        bottom: 20%;
-        width: 100%;
-    }
-
-    .carousel-text h1 {
-        font-size: 2.5rem;
-    }
-
-
+.homepage-featured-cupcakes .preview {
+    width: 140px;
+    height: 140px;
+    background-position: center;
+    background-size: cover;
 }
 
 
@@ -212,4 +197,26 @@ html {
 
 .slide-actions .card-product-actions li a:hover:after, .slide-actions .card-product-actions li a:hover:before {
     opacity: 1
+}
+
+
+/* Responsive Queries at Bottom */ 
+@media (max-width: 768px) {
+    .carousel-item {
+        height: 350px;
+    }
+
+
+    .carousel-text {
+        position: absolute;
+        right: 0%;
+        left: 0%;
+        color: #fff;
+        bottom: 20%;
+        width: 100%;
+    }
+
+    .carousel-text h1 {
+        font-size: 2.5rem;
+    }
 }
