Add basket viewcomponent to the shop page

--- a/ECOMCupCake/ECOMCupCake/Views/Shop/Index.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Views/Shop/Index.cshtml
@@ -1,8 +1,11 @@
-﻿@model PaginatedList<ECOMCupCake.Models.Product>
+﻿@using ECOMCupCake.Components
+@model PaginatedList<ECOMCupCake.Models.Product>
 
 @{
     ViewData["Title"] = "Shop";
 }
+
+@await Component.InvokeAsync(nameof(CurrentBasket))
 
 
 <div class="shop-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
@@ -26,7 +29,7 @@
                 <p class="card-text text-truncate">@item.Description</p>
                 <div class="row">
                     <div class="col-md-6">
-                        <a class="btn btn-primary btn-product active my-2" asp-route-slug="@item.Slug" asp-route-id="@item.ID" asp-controller="Products" asp-action="Details" ><i class="fa fa-info"></i> View</a>
+                        <a class="btn btn-primary btn-product active my-2" asp-route-slug="@item.Slug" asp-route-id="@item.ID" asp-controller="Products" asp-action="Details"><i class="fa fa-info"></i> View</a>
                     </div>
                     <div class="col-md-6">
                         <a href="#" class="btn btn-success btn-product my-2 active"><i class="fa fa-cart-plus"></i> Buy</a>
