--- a/ECOMCupCake/ECOMCupCake/Views/Products/Details.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Views/Products/Details.cshtml
@@ -16,7 +16,7 @@
                         <h4 class="product-title">@Model.Name</h4>
                     </div>
                 </div>
-                
+
             </div>
         </div>
         <hr />
@@ -39,7 +39,8 @@
         @if (Model.Quantity > 0)
         {
             <span>In Stock</span><br />
-            <form>
+            <form asp-route-returnurl="@ViewData["ReturnUrl"]" asp-action="Add" asp-controller="Basket" method="post">
+                <input type="hidden" name="pid" value="@Model.ID" />
                 <div class="form-group">
                     <label class="control-label" for="quantity">@Html.DisplayNameFor(model => model.Quantity)</label>
                     <input id="quantity" name="quantity" class="form-control" type="number" value="1" />
