--- a/ECOMCupCake/ECOMCupCake/Views/Shared/_Layout.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Views/Shared/_Layout.cshtml
@@ -12,15 +12,26 @@
     @await Html.PartialAsync("_nav")
     <div id="mainCarousel" class="carousel slide carousel-fade" data-ride="carousel">
         <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block w-100" style="background-image: url('/images/cupcake_car_2.jpg')">
-                <div class="carousel-text">
-                    <h1>
-                        Made from scratch. Baked fresh. Simply delicious.
-                    </h1>
+            @if (IsSectionDefined("Carousel"))
+            {
+                <div class="carousel-item active">
+                    <img class="d-block w-100" style="background-image: url('/images/cupcake_car_2.jpg')">
+                    <div class="carousel-text">
+                        <h1>
+                            Made from scratch. Baked fresh. Simply delicious.
+                        </h1>
+                    </div>
                 </div>
-            </div>
-            @RenderSection("Carousel", required: false)
+                @RenderSection("Carousel", required: false)
+            }
+            else
+            {
+                <div class="carousel-item active short">
+                    <img class="d-block w-100" style="background-image: url('/images/cupcake_car_2.jpg')">
+                </div>
+            }
+
+
         </div>
     </div>
     @RenderSection("BeforeBody", required: false)
