--- a/ECOMCupCake/ECOMCupCake/Views/Basket/Index.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Views/Basket/Index.cshtml
@@ -9,47 +9,49 @@
 <div class="card shopping-basket">
     <div class="card-header bg-dark text-light">
         <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-        Shopping cart
+        Cart
         <a asp-area="" asp-controller="Shop" asp-action="Index" class="btn btn-outline-success btn-sm float-right">Back to Shopping</a>
         <div class="clearfix"></div>
     </div>
     <div class="card-body">
-        <div class="row">
-            <div class="col-12 col-sm-12 col-md-2 text-center">
-            </div>
-            <div class="col-12 text-sm-center col-sm-12 text-md-left col-md-6">
-                <strong>Product</strong>
-            </div>
-            <div class="col-12 col-sm-12 text-sm-center col-md-4 text-md-right row">
-                <div class="col-3 col-sm-3 col-md-6 text-md-right">
-                    <strong>Price</strong>
+        <div class="basket-header d-none d-lg-block">
+            <div class="row">
+                <div class="col-12 col-sm-12 col-md-2 text-center">
                 </div>
-                <div class="col-4 col-sm-4 col-md-4">
-                    <strong>Quantity</strong>
+                <div class="col-12 text-sm-center col-sm-12 text-md-left col-md-6">
+                    <strong>Product</strong>
                 </div>
-                <div class="col-2 col-sm-2 col-md-2 text-right">
+                <div class="col-12 col-sm-12 text-sm-center col-md-4 text-md-right row">
+                    <div class="col-3 col-sm-3 col-md-6 text-md-right">
+                        <strong>Price</strong>
+                    </div>
+                    <div class="col-4 col-sm-4 col-md-4">
+                        <strong>Quantity</strong>
+                    </div>
+                    <div class="col-2 col-sm-2 col-md-2 text-right">
+                    </div>
                 </div>
             </div>
+            <hr />
         </div>
-        <hr />
         @foreach (var item in Model)
         {
             <div class="row">
                 <div class="col-12 col-sm-12 col-md-2 text-center">
                     <img class="product-image" style="" src="@item?.Product?.Image" alt="Product Image" width="120" height="80">
                 </div>
-                <div class="col-12 text-sm-center col-sm-12 text-md-left col-md-6">
-                    <h4 class="product-name"><strong><a asp-route-slug="@item.Product.Slug" asp-route-id="@item.ProductID" asp-controller="Products" asp-action="Details" data-tip="View"></a></strong></h4>
+                <div class="col-12 col-sm-12 text-md-left col-md-6">
+                    <h4 class="product-name text-center text-md-center text-lg-left text-xl-left"><strong><a asp-route-slug="@item.Product.Slug" asp-route-id="@item.ProductID" asp-controller="Products" asp-action="Details" data-tip="View">@item.Product.Name</a></strong></h4>
                 </div>
                 <div class="col-12 col-sm-12 text-sm-center col-md-4 text-md-right row">
-                    <div class="col-3 col-sm-3 col-md-6 text-md-right" style="padding-top: 5px">
+                    <div class="col-4 col-sm-3 col-md-6 text-md-right">
                         <h6><span class="text-muted">$ </span><strong>@Math.Round(item.Product.Price, 2)</strong></h6>
                     </div>
                     <div class="col-4 col-sm-4 col-md-4">
                         <input type="number" step="1" max="99" min="1" title="Qty" class="quantity"
                                size="4" value="@item.Quantity" data-quantity="@item.Quantity" data-pid="@item.ProductID">
                     </div>
-                    <div class="col-2 col-sm-2 col-md-2 text-right">
+                    <div class="col-4 col-sm-2 col-md-2 text-right">
                         <form asp-controller="Basket" asp-action="Remove">
                             <input type="hidden" name="pid" value="@item.ProductID" />
                             <button type="submit" class="btn btn-outline-danger btn-xs">
