Added External Login Signup Confirmation and Persist Claims.

--- a/ECOMCupCake/ECOMCupCake/Views/Shared/_nav.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Views/Shared/_nav.cshtml
@@ -1,7 +1,10 @@
 @using Microsoft.AspNetCore.Identity
 @using ECOMCupCake.Models
 @using ECOMCupCake.Components
-
+@using System.Security.Claims
+@{
+    var uNameClaim = @User.Claims.FirstOrDefault(x => x.Type == "Name");
+}
 @inject SignInManager<ApplicationUser> SignInManager
 <header>
     <div class="navbar-wrapper container">
@@ -18,7 +21,7 @@
                 @if (SignInManager.IsSignedIn(User))
                 {
                     <ul class="navbar-nav mr-auto">
-                        <a class="nav-link">Hello @User.Claims.First(name => name.Type == "Name").Value!</a>
+                        <a class="nav-link">Hello @(uNameClaim != null ? uNameClaim.Value : "")!</a>
                     </ul>
                     <form asp-action="Logout" asp-controller="Account" method="post" id="logoutForm" class="navbar-right">
                         <ul class="navbar-nav navbar-right">
