--- a/ECOMCupCake/ECOMCupCake/Views/Account/Login.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Views/Account/Login.cshtml
@@ -3,6 +3,8 @@
 @using Microsoft.AspNetCore.Http
 @using Microsoft.AspNetCore.Http.Authentication
 @model LoginViewModel
+@inject SignInManager<ApplicationUser> SignInManager
+
 
 @{
     ViewData["Title"] = "Login";
@@ -39,7 +41,31 @@
         </div>
     </div>
 </div>
-
+@{
+    var loginProviders = (await SignInManager.GetExternalAuthenticationSchemesAsync()).ToList();
+    if (loginProviders.Count == 0)
+    {
+        <div>
+            <p>
+                There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
+                for details on setting up this ASP.NET application to support logging in via external services.
+            </p>
+        </div>
+    }
+    else
+    {
+        <form asp-action="ExternalLogin" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
+            <div>
+                <p>
+                    @foreach (var provider in loginProviders)
+                    {
+                        <button type="submit" class="btn btn-default" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.Name</button>
+                    }
+                </p>
+            </div>
+        </form>
+    }
+}
 
 @section Scripts {
     @await Html.PartialAsync("_ValidationScriptsPartial")
