--- a/ECOMCupCake/ECOMCupCake/Views/Account/Login.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Views/Account/Login.cshtml
@@ -59,7 +59,7 @@
                 <p>
                     @foreach (var provider in loginProviders)
                     {
-                        <button type="submit" class="btn btn-default" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.Name</button>
+                        <button type="submit" class="btn btn-default" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account"><i class="fab fa-@provider.Name.ToLower()"></i> @provider.Name</button>
                     }
                 </p>
             </div>
