--- a/ECOMCupCake/ECOMCupCake/Views/Checkout/Receipt.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Views/Checkout/Receipt.cshtml
@@ -7,48 +7,7 @@
 <h2>Review items</h2>
 
 <div class="card shopping-basket">
-    <div class="card-body">
-        <div class="basket-header d-none d-lg-block">
-            <div class="row">
-                <div class="col-12 col-sm-12 col-md-2 text-center">
-                </div>
-                <div class="col-12 text-sm-center col-sm-12 text-md-left col-md-6">
-                    <strong>Product</strong>
-                </div>
-                <div class="col-12 col-sm-12 text-sm-center col-md-4 text-md-right row">
-                    <div class="col-3 col-sm-3 col-md-6 text-md-right">
-                        <strong>Price</strong>
-                    </div>
-                    <div class="col-4 col-sm-4 col-md-4">
-                        <strong>Quantity</strong>
-                    </div>
-                    <div class="col-2 col-sm-2 col-md-2 text-right">
-                    </div>
-                </div>
-            </div>
-            <hr />
-        </div>
-        @foreach (var item in Model)
-        {
-            <div class="row">
-                <div class="col-12 col-sm-12 col-md-2 text-center">
-                    <img class="product-image" style="" src="@item?.Product?.Image" alt="Product Image" width="120" height="80">
-                </div>
-                <div class="col-12 col-sm-12 text-md-left col-md-6">
-                    <h4 class="product-name text-center text-md-center text-lg-left text-xl-left"><strong><a asp-route-slug="@item.Product.Slug" asp-route-id="@item.ProductID" asp-controller="Products" asp-action="Details" data-tip="View">@item.Product.Name</a></strong></h4>
-                </div>
-                <div class="col-12 col-sm-12 text-sm-center col-md-4 text-md-right row">
-                    <div class="col-4 col-sm-3 col-md-6 text-md-right">
-                        <h6><span class="text-muted">$ </span><strong>@Math.Round(item.Product.Price, 2)</strong></h6>
-                    </div>
-                    <div class="col-4 col-sm-4 col-md-4">
-                        <h6><span class="text-muted"></span><strong>@item.Quantity</strong></h6>
-                    </div>
-                </div>
-            </div>
-            <hr />
-        }
-    </div>
+    @await Html.PartialAsync("_items", Model)
     <div class="card-footer">
         <div class="float-left" style="margin: 5px">
             Total price: <b>$@Math.Round(Model.Sum(item => item.Product.Price * item.Quantity), 2)</b>
