--- a/ECOMCupCake/ECOMCupCake/Views/Shared/_items.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Views/Shared/_items.cshtml
@@ -1,43 +1,24 @@
 ﻿@model IEnumerable<ECOMCupCake.Models.Basket>
-<div class="card-body">
-    <div class="basket-header d-none d-lg-block">
-        <div class="row">
-            <div class="col-12 col-sm-12 col-md-2 text-center">
-            </div>
-            <div class="col-12 text-sm-center col-sm-12 text-md-left col-md-6">
-                <strong>Product</strong>
-            </div>
-            <div class="col-12 col-sm-12 text-sm-center col-md-4 text-md-right row">
-                <div class="col-3 col-sm-3 col-md-6 text-md-right">
-                    <strong>Price</strong>
+
+<div class="col-md-4 order-md-2 mb-4">
+    <h4 class="d-flex justify-content-between align-items-center mb-3">
+        <span class="text-muted">Your cart</span>
+        <span class="badge badge-secondary badge-pill">3</span>
+    </h4>
+    <ul class="list-group mb-3">
+        @foreach (var item in Model)
+        {
+            <li class="list-group-item d-flex justify-content-between lh-condensed">
+                <div>
+                    <h6 class="my-0">@item.Product.Name</h6>
+                    <small class="text-muted">Qty: @item.Quantity</small>
                 </div>
-                <div class="col-4 col-sm-4 col-md-4">
-                    <strong>Quantity</strong>
-                </div>
-                <div class="col-2 col-sm-2 col-md-2 text-right">
-                </div>
-            </div>
-        </div>
-        <hr />
-    </div>
-    @foreach (var item in Model)
-    {
-        <div class="row">
-            <div class="col-12 col-sm-12 col-md-2 text-center">
-                <img class="product-image" style="" src="@item?.Product?.Image" alt="Product Image" width="120" height="80">
-            </div>
-            <div class="col-12 col-sm-12 text-md-left col-md-6">
-                <h4 class="product-name text-center text-md-center text-lg-left text-xl-left"><strong><a asp-route-slug="@item.Product.Slug" asp-route-id="@item.ProductID" asp-controller="Products" asp-action="Details" data-tip="View">@item.Product.Name</a></strong></h4>
-            </div>
-            <div class="col-12 col-sm-12 text-sm-center col-md-4 text-md-right row">
-                <div class="col-4 col-sm-3 col-md-6 text-md-right">
-                    <h6><span class="text-muted">$ </span><strong>@Math.Round(item.Product.Price, 2)</strong></h6>
-                </div>
-                <div class="col-4 col-sm-4 col-md-4">
-                    <h6><span class="text-muted"></span><strong>@item.Quantity</strong></h6>
-                </div>
-            </div>
-        </div>
-        <hr />
-    }
+                <span class="text-muted">$@Math.Round(item.Product.Price, 2)</span>
+            </li>
+        }
+        <li class="list-group-item d-flex justify-content-between">
+            <span>Total (USD)</span>
+            <strong>$@Math.Round(Model.Sum(item => item.Product.Price * item.Quantity), 2)</strong>
+        </li>
+    </ul>
 </div>
