--- a/ECOMCupCake/ECOMCupCake/Views/Account/Login.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Views/Account/Login.cshtml
@@ -43,28 +43,16 @@
 </div>
 @{
     var loginProviders = (await SignInManager.GetExternalAuthenticationSchemesAsync()).ToList();
-    if (loginProviders.Count == 0)
-    {
-        <div>
-            <p>
-                There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                for details on setting up this ASP.NET application to support logging in via external services.
-            </p>
-        </div>
-    }
-    else
-    {
         <form asp-action="ExternalLogin" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
-            <div>
+            <div class="col-12 col-md-8 col-sm-8 col-lg-4 mx-auto">
                 <p>
                     @foreach (var provider in loginProviders)
                     {
-                        <button type="submit" class="btn btn-default" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account"><i class="fab fa-@provider.Name.ToLower()"></i> @provider.Name</button>
+                        <button type="submit" class="btn btn-default btn-lg" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account"><i class="fab fa-@provider.Name.ToLower()"></i> @provider.Name</button>
                     }
                 </p>
             </div>
         </form>
-    }
 }
 
 @section Scripts {
