--- a/ECOMCupCake/ECOMCupCake/Views/Account/Register.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Views/Account/Register.cshtml
@@ -52,7 +52,7 @@
                             <input asp-for="ZipCode" class="form-control" />
                             <span asp-validation-for="ZipCode" class="text-danger"></span>
                         </div>
-                        <button type="submit" class="btn btn-default">Register</button>
+                        <button type="submit" class="btn btn-lg btn-secondary btn-block">Register</button>
                     </form>
                 </section>
             </div>
