--- a/ECOMCupCake/ECOMCupCake/Views/Basket/Index.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Views/Basket/Index.cshtml
@@ -6,13 +6,13 @@
 }
 
 <h1 class="display-4 text-center">Basket</h1>
-<div class="card shopping-basket">
-    <div class="card-header bg-dark text-light">
-        <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-        Cart
+<div class="row pb-2">
+    <div class="col">
         <a asp-area="" asp-controller="Shop" asp-action="Index" class="btn btn-outline-success btn-sm float-right">Back to Shopping</a>
-        <div class="clearfix"></div>
     </div>
+</div>
+<div class="card shopping-basket">
+
     <div class="card-body">
         <div class="basket-header d-none d-lg-block">
             <div class="row">
@@ -40,8 +40,8 @@
                 <div class="col-12 col-sm-12 col-md-2 text-center">
                     <img class="product-image" style="" src="@item?.Product?.Image" alt="Product Image" width="120" height="80">
                 </div>
-                <div class="col-12 col-sm-12 text-md-left col-md-6">
-                    <h4 class="product-name text-center text-md-center text-lg-left text-xl-left"><strong><a asp-route-slug="@item.Product.Slug" asp-route-id="@item.ProductID" asp-controller="Products" asp-action="Details" data-tip="View">@item.Product.Name</a></strong></h4>
+                <div class="col-12 col-sm-12 text-md-left col-md-6 text-center text-md-center text-lg-left text-xl-left">
+                    <a asp-route-slug="@item.Product.Slug" asp-route-id="@item.ProductID" asp-controller="Products" asp-action="Details" data-tip="View" class=" text-dark ">@item.Product.Name</a>
                 </div>
                 <div class="col-12 col-sm-12 text-sm-center col-md-4 text-md-right row">
                     <div class="col-4 col-sm-3 col-md-6 text-md-right">
