--- a/ECOMCupCake/ECOMCupCake/Views/Shared/_items.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Views/Shared/_items.cshtml
@@ -1,12 +1,15 @@
 ﻿@model IEnumerable<ECOMCupCake.Models.Basket>
 
+@{ 
+    decimal sum = 0;
+}
 <div class="col-md-4 order-md-2 mb-4">
     <h4 class="d-flex justify-content-between align-items-center mb-3">
         <span class="text-muted">Your cart</span>
         <span class="badge badge-secondary badge-pill">3</span>
     </h4>
     <ul class="list-group mb-3">
-        @foreach (var item in Model)
+        @foreach (var item in Model ?? Enumerable.Empty<ECOMCupCake.Models.Basket>())
         {
             <li class="list-group-item d-flex justify-content-between lh-condensed">
                 <div>
@@ -15,10 +18,13 @@
                 </div>
                 <span class="text-muted">$@Math.Round(item.Product.Price, 2)</span>
             </li>
+            {
+                    sum += item.Product.Price * item.Quantity;
+            }
         }
         <li class="list-group-item d-flex justify-content-between">
             <span>Total (USD)</span>
-            <strong>$@Math.Round(Model.Sum(item => item.Product.Price * item.Quantity), 2)</strong>
+            <strong>$@Math.Round(sum, 2)</strong>
         </li>
     </ul>
 </div>
