--- a/ECOMCupCake/ECOMCupCake/Views/Checkout/Receipt.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Views/Checkout/Receipt.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "Order";
 }
 
-<h2>Review items</h2>
+<h2>Receipt</h2>
 
 <div class="container">
     <div class="row">
         @await Html.PartialAsync("_items", Model)
-        @await Html.PartialAsync("_addressForm")
-        @await Html.PartialAsync("_payment")
+        @*@await Html.PartialAsync("_addressForm")*@
+        @*@await Html.PartialAsync("_payment")*@
     </div>
 </div>
