--- a/ECOMCupCake/ECOMCupCake/Pages/Profile/Index.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Pages/Profile/Index.cshtml
@@ -49,7 +49,7 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.AppUser.Id">Edit</a> |
+    <a asp-page="./Edit" asp-route-userId="@Model.AppUser.Id">Edit</a> |
     <a asp-page="/Home">Back to List</a>
 </div>
 
