Add nav bar and layout to all administating pages

--- a/ECOMCupCake/ECOMCupCake/Pages/Profile/Edit.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Pages/Profile/Edit.cshtml
@@ -1,6 +1,8 @@
 ﻿@page
 @model ECOMCupCake.Pages.Profile.EditModel
 @{
+    ViewData["Title"] = "Edit Profile";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Edit</h2>
