--- a/ECOMCupCake/ECOMCupCake/Pages/Admin/Index.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Pages/Admin/Index.cshtml
@@ -3,12 +3,13 @@
 
 @{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Manage inventory</h2>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create">Add New Product</a>
 </p>
 <table class="table">
     <thead>
