--- a/ECOMCupCake/ECOMCupCake/Pages/Profile/Index.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Pages/Profile/Index.cshtml
@@ -2,6 +2,7 @@
 @model ECOMCupCake.Pages.Profile.IndexModel
 @{
     ViewData["Title"] = "Details";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Details</h2>
@@ -50,6 +51,5 @@
 </div>
 <div>
     <a asp-page="./Edit" asp-route-userId="@Model.AppUser.Id">Edit</a> |
-    <a asp-page="/Home">Back to List</a>
 </div>
 
