--- a/ECOMCupCake/ECOMCupCake/Views/Shared/_nav.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Views/Shared/_nav.cshtml
@@ -17,6 +17,14 @@
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item"><a asp-area="" asp-controller="Home" asp-action="Index" class="nav-link">Home</a></li>
                     <li class="nav-item"><a asp-area="" asp-controller="Shop" asp-action="Index" class="nav-link">Shop</a></li>
+                    @if (SignInManager.IsSignedIn(User))
+                    {
+                        <li class="nav-item"><a asp-area="" asp-controller="Profile" asp-action="Index" class="nav-link">Profile</a></li>
+                        @if (User.HasClaim(ClaimTypes.Role, "Admin"))
+                        {
+                            <li class="nav-item"><a asp-area="" asp-controller="Admin" asp-action="Index" class="nav-link">Admin</a></li>
+                        }
+                    }
                 </ul>
                 @if (SignInManager.IsSignedIn(User))
                 {
