Add orders link to navigation bar

--- a/ECOMCupCake/ECOMCupCake/Pages/Admin/Orders.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Pages/Admin/Orders.cshtml
@@ -6,7 +6,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Orders</h2>
+<h2>Last 10 Orders in the Shop</h2>
 
 <table class="table">
     <tbody>
