--- a/ECOMCupCake/ECOMCupCake/Pages/Profile/Orders.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Pages/Profile/Orders.cshtml
@@ -6,44 +6,33 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Orders</h2>
+<h2>Your last 5 Orders</h2>
 
 <table class="table">
-    <thead>
-        <tr>
-            <th>
-                Order #:
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Orders[0].Total)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
     <tbody>
-@foreach (var item in Model.Orders)
-{
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.ID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Total)
-            </td>
-        </tr>
-        <tr>
+        @foreach (var item in Model.Orders)
+        {
+            <tr>
+                <td>
+                    Order #: @Html.DisplayFor(modelItem => item.ID)
+                </td>
+                <td></td>
+                <td>
+                    Total: @Html.DisplayFor(modelItem => item.Total)
+                </td>
+            </tr>
             @foreach (var product in item.Baskets)
             {
-            <td>
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => product.Product.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => product.Product.Quantity)
-            </td>
+                <tr>
+                    <td></td>
+                    <td>
+                        @Html.DisplayFor(modelItem => product.Product.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => product.Quantity)
+                    </td>
+                </tr>
             }
-        </tr>
-}
+        }
     </tbody>
 </table>
