--- a/ECOMCupCake/ECOMCupCake/Views/Shared/_nav.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Views/Shared/_nav.cshtml
@@ -20,9 +20,11 @@
                     @if (SignInManager.IsSignedIn(User))
                     {
                         <li class="nav-item"><a asp-area="" asp-controller="Profile" asp-action="Index" class="nav-link">Profile</a></li>
+                        <li class="nav-item"><a asp-area="" asp-controller="Profile" asp-action="Orders" class="nav-link">Your orders</a></li>
                         @if (User.HasClaim(ClaimTypes.Role, "Admin"))
                         {
                             <li class="nav-item"><a asp-area="" asp-controller="Admin" asp-action="Index" class="nav-link">Admin</a></li>
+                            <li class="nav-item"><a asp-area="" asp-controller="Admin" asp-action="Orders" class="nav-link">Last Orders</a></li>
                         }
                     }
                 </ul>
