--- a/ECOMCupCake/ECOMCupCake/Views/Shared/_payment.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Views/Shared/_payment.cshtml
@@ -1,54 +1,26 @@
 ﻿<div class="col-md-8 order-md-3">
-    <form class="needs-validation" novalidate="">
+    <form >
         <h4 class="mb-3">Payment</h4>
         <div class="d-block my-3">
             <div class="custom-control custom-radio">
                 <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked="" required="">
                 <label class="custom-control-label" for="credit">Credit card</label>
             </div>
-            <div class="custom-control custom-radio">
-                <input id="debit" name="paymentMethod" type="radio" class="custom-control-input" required="">
-                <label class="custom-control-label" for="debit">Debit card</label>
-            </div>
-            <div class="custom-control custom-radio">
-                <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" required="">
-                <label class="custom-control-label" for="paypal">Paypal</label>
-            </div>
         </div>
         <div class="row">
-            <div class="col-md-6 mb-3">
-                <label for="cc-name">Name on card</label>
-                <input type="text" class="form-control" id="cc-name" placeholder="" required="">
-                <small class="text-muted">Full name as displayed on card</small>
-                <div class="invalid-feedback">
-                    Name on card is required
-                </div>
-            </div>
             <div class="col-md-6 mb-3">
                 <label for="cc-number">Credit card number</label>
-                <input type="text" class="form-control" id="cc-number" placeholder="" required="">
-                <div class="invalid-feedback">
-                    Credit card number is required
-                </div>
+                <select type="text" class="form-control" name="CreditCardNumber" id="cc-number" placeholder="" required="">
+                    <option value="370000000000002">370000000000002</option>
+                    <option value="6011000000000012">6011000000000012</option>
+                    <option value="3088000000000017">3088000000000017</option>
+                    <option value="38000000000006">38000000000006</option>
+                    <option value="4007000000027">4007000000027</option>
+                    <option value="5424000000000015">5424000000000015</option>
+                </select>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-3 mb-3">
-                <label for="cc-expiration">Expiration</label>
-                <input type="text" class="form-control" id="cc-expiration" placeholder="" required="">
-                <div class="invalid-feedback">
-                    Expiration date required
-                </div>
-            </div>
-            <div class="col-md-3 mb-3">
-                <label for="cc-expiration">CVV</label>
-                <input type="text" class="form-control" id="cc-cvv" placeholder="" required="">
-                <div class="invalid-feedback">
-                    Security code required
-                </div>
-            </div>
-        </div>
-        <hr class="mb-4">
-        <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
+        <hr class="mb-4"/>
+        <button class="btn btn-primary btn-lg btn-block" type="submit">Checkout</button>
     </form>
 </div>
