--- a/ECOMCupCake/ECOMCupCake/Views/Shared/_addressForm.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Views/Shared/_addressForm.cshtml
@@ -1,17 +1,16 @@
 ﻿<div class="col-md-8 order-md-1">
     <h4 class="mb-3">Billing address</h4>
-    <form class="needs-validation" novalidate="">
         <div class="row">
             <div class="col-md-6 mb-3">
                 <label for="firstName">First name</label>
-                <input type="text" class="form-control" id="firstName" placeholder="" value="" required="">
+                <input type="text" class="form-control" id="firstName" placeholder="" value="" required="" name="LastName">
                 <div class="invalid-feedback">
                     Valid first name is required.
                 </div>
             </div>
             <div class="col-md-6 mb-3">
                 <label for="lastName">Last name</label>
-                <input type="text" class="form-control" id="lastName" placeholder="" value="" required="">
+                <input type="text" class="form-control" id="lastName" placeholder="" value="" required="" name="FirstName">
                 <div class="invalid-feedback">
                     Valid last name is required.
                 </div>
@@ -19,53 +18,49 @@
         </div>
         <div class="mb-3">
             <label for="address">Address</label>
-            <input type="text" class="form-control" id="address" placeholder="1234 Main St" required="">
+            <input type="text" class="form-control" id="address" placeholder="1234 Main St" required="" name="Address">
             <div class="invalid-feedback">
                 Please enter your shipping address.
             </div>
         </div>
         <div class="mb-3">
             <label for="address2">Address 2 <span class="text-muted">(Optional)</span></label>
-            <input type="text" class="form-control" id="address2" placeholder="Apartment or suite">
+            <input type="text" class="form-control" id="address2" placeholder="Apartment or suite" name="Address2">
         </div>
         <div class="row">
-            <div class="col-md-5 mb-3">
+            <div class="col-md-3 mb-3">
                 <label for="country">Country</label>
-                <select class="custom-select d-block w-100" id="country" required="">
+                <select class="custom-select d-block w-100" id="country" required="" name="Country">
                     <option value="">Choose...</option>
-                    <option>United States</option>
+                    <option value="US">United States</option>
                 </select>
-                <div class="invalid-feedback">
-                    Please select a valid country.
-                </div>
             </div>
-            <div class="col-md-4 mb-3">
+            <div class="col-md-3 mb-3">
                 <label for="state">State</label>
-                <select class="custom-select d-block w-100" id="state" required="">
+                <select class="custom-select d-block w-100" id="state" required="" name="State">
                     <option value="">Choose...</option>
-                    <option>California</option>
+                    <option value="CA">California</option>
+                    <option value="WA">Washington</option>
+
                 </select>
                 <div class="invalid-feedback">
                     Please provide a valid state.
                 </div>
             </div>
             <div class="col-md-3 mb-3">
+                <label for="state">City</label>
+                <input type="text" class="form-control" id="city" placeholder="" required="" name="City">
+                <div class="invalid-feedback">
+                    Please provide a valid city.
+                </div>
+            </div>
+            <div class="col-md-2 mb-3">
                 <label for="zip">Zip</label>
-                <input type="text" class="form-control" id="zip" placeholder="" required="">
+                <input type="text" class="form-control" id="zip" placeholder="" required="" name="ZipCode">
                 <div class="invalid-feedback">
                     Zip code required.
                 </div>
             </div>
         </div>
         <hr class="mb-4">
-        <div class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" id="same-address">
-            <label class="custom-control-label" for="same-address">Shipping address is the same as my billing address</label>
-        </div>
-        <div class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" id="save-info">
-            <label class="custom-control-label" for="save-info">Save this information for next time</label>
-        </div>
-        <hr class="mb-4">
-    </form>
 </div>
