--- a/ECOMCupCake/ECOMCupCake/Pages/Profile/Index.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Pages/Profile/Index.cshtml
@@ -50,6 +50,6 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-userId="@Model.AppUser.Id">Edit</a> |
+    <a asp-page="./Edit">Edit</a> |
 </div>
 
