--- a/ECOMCupCake/ECOMCupCake/Pages/Profile/Edit.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Pages/Profile/Edit.cshtml
@@ -2,49 +2,48 @@
 @model ECOMCupCake.Pages.Profile.EditModel
 @{
     ViewData["Title"] = "Edit Profile";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "_Layout.cshtml";
 }
 
-<h2>Edit</h2>
 
-<h4>User Profile</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="AppUser.Id" />
-            <input type="hidden" asp-for="AppUser.UserName" />
-            <div class="form-group">
-                <label asp-for="AppUser.FirstName" class="control-label"></label>
-                <input asp-for="AppUser.FirstName" class="form-control" />
-                <span asp-validation-for="AppUser.FirstName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="AppUser.LastName" class="control-label"></label>
-                <input asp-for="AppUser.LastName" class="form-control" />
-                <span asp-validation-for="AppUser.LastName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="AppUser.State" class="control-label"></label>
-                <input asp-for="AppUser.State" class="form-control" />
-                <span asp-validation-for="AppUser.State" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="AppUser.ZipCode" class="control-label"></label>
-                <input asp-for="AppUser.ZipCode" class="form-control" />
-                <span asp-validation-for="AppUser.ZipCode" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </form>
+<div class="card mb-4 box-shadow">
+    <div class="card-header">
+        <h4 class="my-0 font-weight-normal">@ViewData["Title"]</h4>
+    </div>
+    <div class="card-body">
+        <section>
+            <form method="post">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="AppUser.Id" />
+                <input type="hidden" asp-for="AppUser.UserName" />
+                <div class="form-group">
+                    <label asp-for="AppUser.FirstName" class="control-label"></label>
+                    <input asp-for="AppUser.FirstName" class="form-control" />
+                    <span asp-validation-for="AppUser.FirstName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="AppUser.LastName" class="control-label"></label>
+                    <input asp-for="AppUser.LastName" class="form-control" />
+                    <span asp-validation-for="AppUser.LastName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="AppUser.State" class="control-label"></label>
+                    <input asp-for="AppUser.State" class="form-control" />
+                    <span asp-validation-for="AppUser.State" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="AppUser.ZipCode" class="control-label"></label>
+                    <input asp-for="AppUser.ZipCode" class="form-control" />
+                    <span asp-validation-for="AppUser.ZipCode" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-default" />
+                </div>
+            </form>
+        </section>
     </div>
 </div>
 
-<div>
-    <a asp-page="./Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
