--- a/ECOMCupCake/ECOMCupCake/Pages/Profile/Password.cshtml
+++ b/ECOMCupCake/ECOMCupCake/Pages/Profile/Password.cshtml
@@ -3,12 +3,11 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "_Layout.cshtml";
     ViewData["Title"] = "Change Password";
 }
 
-<div class="row">
-    <div class="col-12 col-lg-4 mx-auto">
+
         <div class="card mb-4 box-shadow">
             <div class="card-header">
                 <h4 class="my-0 font-weight-normal">@ViewData["Title"]</h4>
@@ -46,8 +45,6 @@
                 </section>
             </div>
         </div>
-    </div>
-</div>
 
 
 @section Scripts {
